--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,23 +11,22 @@
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/takePhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Prendre Photo"
+        style="@android:style/DeviceDefault.ButtonBar"
+        android:layout_marginBottom="0dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        style="@android:style/DeviceDefault.ButtonBar" />
+        android:layout_centerHorizontal="true" />
 
     <VideoView
         android:id="@+id/video_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/button" />
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/takePhoto"
+        android:minHeight="800dp"
+        android:minWidth="900dp"
+        android:layout_centerInParent="true" />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageButton"
-        android:layout_alignEnd="@+id/video_view" />
 </RelativeLayout>
